--- a/index.html
+++ b/index.html
@@ -96,21 +96,21 @@
         <h2 class="heading" id="certifications-title">Certifications</h2>
         <div class="certifications-container">
             <div class="services-box">
-                <h3>Certifications</h3>
+                <h3>certifications</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda 
                     quod, beatae temporibus porro quisquam id quo dolore officiis unde? 
                     Sapiente cumque quae nihil porro. Ex cumque a maiores labore explicabo.</p>
                     <a href="#" class="btn">Read More</a>
             </div>
             <div class="services-box">
-                <h3>Web Development</h3>
+                <h3>certifications</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda 
                     quod, beatae temporibus porro quisquam id quo dolore officiis unde? 
                     Sapiente cumque quae nihil porro. Ex cumque a maiores labore explicabo.</p>
                     <a href="#" class="btn">Read More</a>
             </div>
             <div class="services-box">
-                <h3>Web Development</h3>
+                <h3>certifications</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda 
                     quod, beatae temporibus porro quisquam id quo dolore officiis unde? 
                     Sapiente cumque quae nihil porro. Ex cumque a maiores labore explicabo.</p>
@@ -129,22 +129,26 @@
         </div>
         <span>
             <div class="input-box">
-                <div class="services-box">
-            IGL Granos S.A.
-Av. Santa Fe 3818 piso 4to. Dto. A
-(1425) Buenos Aires
-Tel.: 00 54 9 11 3678 5756
-Email: info@iglgranos.com.ar
-</div>
-<div class="services-box">
-InterContinental Foods LLC
-Address: 601 E Charleston Blvd. Ste # 100, Las Vegas, NV 89104
-Ph.: +1(415) 691-6789
-Cell.: +1(510) 717-0985
-Argentina +(54911) 5488-2095
-Email: juan@icfoods.net 
-</div>
-</div>
+                <div class="services-box form">
+                    <div class="contacto-text">
+                        IGL Granos S.A.</br>
+                        Av. Santa Fe 3818 piso 4to. Dto. A</br>
+                        (1425) Buenos Aires</br>
+                        Tel.: 00 54 9 11 3678 5756</br>
+                        Email: info@iglgranos.com.ar
+                    </div>
+                </div>
+                <div class="services-box form">
+                    <div class="contacto-text">
+                        InterContinental Foods LLC</br>
+                        Address: 601 E Charleston Blvd. Ste # 100, Las Vegas, NV 89104</br>
+                        Ph.: +1(415) 691-6789</br>
+                        Cell.: +1(510) 717-0985</br>
+                        Argentina +(54911) 5488-2095</br>
+                        Email: juan@icfoods.net 
+                    </div>
+                </div>
+            </div>
         </span>
     </section>
 
