--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Home Section  -->
     <section id="banner">
         <div class="banner">
-            <img  class="img-fluid" src="./img/banner-ok.png"  alt="home" style=" width: 100%">
+            <img  class="img-fluid" src="./img/banner.png"  alt="home" style=" width: 100%">
         </div>
     </section>
 
@@ -80,13 +80,117 @@
     <section class="services" id="services">
         <h2 class="heading" id="products-title">Products</h2>
         <div class="services-container">
-            <div class="services-box">
-                <h3>Products</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda 
-                    quod, beatae temporibus porro quisquam id quo dolore officiis unde? 
-                    Sapiente cumque quae nihil porro. Ex cumque a maiores labore explicabo.</p>
-                    <a href="#" class="btn">Read More</a>
+            <div class="products-box">
+                <img src="./img/products/Crude-sunflower-oil.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Crude sunflower oil</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
             </div>
+            <div class="products-box">
+                <img src="./img/products/Refined-sunflower-oil.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Refined sunflower oil</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/High-oleic-crude-sunflower-oil.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>High oleic crude</h4>
+                    <h4> sunflower oil</h4>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/High-oleic-refined-sunflower-oil.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>CHigh oleic refined</h4>
+                    <h4>sunflower oil</h4>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/Sunflower-expeller.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Sunflower expeller</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/Sunflower-flour.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Sunflower flour</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/Sunflower-seed.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Sunflower seed</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/Soybean.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Soybean</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/Refined-soybean-oil.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Refined soybean oil</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/Soybean-expeller.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Soybean expeller</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/Soybean-flour.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Soybean flour</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <div class="products-box">
+                <img src="./img/products/Flaxseed.jpg" alt="" style="width: 120px;">
+                <div class="porfolio-layer">
+                    <h4>Flaxseed</h4>
+                    <h6 class="br-products"> </h6>
+                <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
+                </div>
+            </div>
+            <!-- <div class="services-box">
+                <h4> Crude sunflower oil </h4>
+                    <h4>Refined sunflower oil </h4>
+                        <h4>High oleic crude sunflower oil </h4>
+                            <h4>High oleic refined sunflower oil </h4>
+                                <h4>Sunflower expeller </h4>
+                                    <h4>Sunflower flour </h4>
+                                        <h4>Sunflower seed </h4>
+                                            <h4>Soybean </h4>
+                                                <h4>Refined soybean oil </h4>
+                                                    <h4>Soybean expeller </h4>
+                                                        <h4>Soybean flour </h4>
+                                                            <h4>Flaxseed </h4>
+                   <a href="#" class="btn">Read More</a> -->
+            </div> 
 
         </div>
     </section>
