css productos update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="products-box">
                 <img src="./img/products/Crude-sunflower-oil.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Crude sunflower oil</h4>
+                    <h4 id="crude-sunflower">Crude sunflower oil</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -91,7 +91,7 @@
             <div class="products-box">
                 <img src="./img/products/Refined-sunflower-oil.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Refined sunflower oil</h4>
+                    <h4 id="refined-sunflower-oil">Refined sunflower oil</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -99,23 +99,23 @@
             <div class="products-box">
                 <img src="./img/products/High-oleic-crude-sunflower-oil.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>High oleic crude</h4>
-                    <h4> sunflower oil</h4>
+                    <h4 id="high-oleic-crude">High oleic crude</h4>
+                    <h4 id="sunflower-oil"> sunflower oil</h4>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
             <div class="products-box">
                 <img src="./img/products/High-oleic-refined-sunflower-oil.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>CHigh oleic refined</h4>
-                    <h4>sunflower oil</h4>
+                    <h4 id="chigh-oleic-refined">Chigh oleic refined</h4>
+                    <h4 id="sunflower-oil">sunflower oil</h4>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
             <div class="products-box">
                 <img src="./img/products/Sunflower-expeller.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Sunflower expeller</h4>
+                    <h4 id="sunflower-expeller">Sunflower expeller</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -123,7 +123,7 @@
             <div class="products-box">
                 <img src="./img/products/Sunflower-flour.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Sunflower flour</h4>
+                    <h4 id="sunflower-flour">Sunflower flour</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -131,7 +131,7 @@
             <div class="products-box">
                 <img src="./img/products/Sunflower-seed.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Sunflower seed</h4>
+                    <h4 id="sunflower-seed">Sunflower seed</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -139,7 +139,7 @@
             <div class="products-box">
                 <img src="./img/products/Soybean.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Soybean</h4>
+                    <h4 id="soybean">Soybean</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -147,7 +147,7 @@
             <div class="products-box">
                 <img src="./img/products/Refined-soybean-oil.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Refined soybean oil</h4>
+                    <h4 id="refined-soybean-oil">Refined soybean oil</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -155,7 +155,7 @@
             <div class="products-box">
                 <img src="./img/products/Soybean-expeller.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Soybean expeller</h4>
+                    <h4 id="soybean-expeller">Soybean expeller</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -163,7 +163,7 @@
             <div class="products-box">
                 <img src="./img/products/Soybean-flour.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Soybean flour</h4>
+                    <h4 id="soybean-flour">Soybean flour</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
@@ -171,7 +171,7 @@
             <div class="products-box">
                 <img src="./img/products/Flaxseed.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4>Flaxseed</h4>
+                    <h4 id="flaxseed">Flaxseed</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
