--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
             <div class="multi-texto">
                 <h3>IGL </h3><h3><span class="multiple-texto"></span></h3>
             </div>
-            <p class="home-p">IGL Granos S.A. was established in 2005, initially dedicated to the brokerage of cereals and oilseeds. 
-                Starting in 2018, it began its activity as a processor and exporter of agricultural raw materials, 
-                focusing on organic products. Currently, the company focuses its attention on the provision of organic products, 
-                both grains and by-products, obtained from its fazon agreement with MBS Agroindustrias S.R.L. From 2020, 
-                its strategic alliance with InterContinental Foods LLC allows it fluid access to the North American market.</p>
+            <p class="home-p">IGL was established in 2005 as cereal and oilseed broker.</br>
+                Throughout the years we began producing in our own ranches and further </br>
+                processing our raw material thus transforming into edible vegetable oils</br> and flours.</br>
+                In 2018, along with our own production, we associated fellow ranchers and</br> decided to go Organic.</br> 
+                We began reaching international markets ensuring full traceability and full</br> guarantee on every product we exported.</br>
+                Currently, the company focuses its activities on the provision of , pulses</br> and by-products such as vegetable oils and flours.</br>
+                Our exclusive agreement with MBS Agroindustries, enables our full Organic</br> processing.</br>
+                Our strategic partnership with InterContinental Foods in the US,</br>
+                allows us a solid representation in the North American market.</p>
         </div>
         <div class="home-img">
             <img src="./img/productor-right.jpg" alt="" class="home-img">
