--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <p class="home-p">IGL was established in 2005 as cereal and oilseed broker.</br>
                 Throughout the years we began producing in our own ranches and further </br>
-                processing our raw material thus transforming into edible vegetable oils</br> and flours.</br>
+                processing our raw material thus transforming into edible vegetable oils and flours.</br>
                 In 2018, along with our own production, we associated fellow ranchers and</br> decided to go Organic.</br> 
                 We began reaching international markets ensuring full traceability and full</br> guarantee on every product we exported.</br>
                 Currently, the company focuses its activities on the provision of , pulses</br> and by-products such as vegetable oils and flours.</br>
@@ -202,27 +202,28 @@
     <!-- Certifications Section -->
     <section class="certifications" id="certifications">
         <h2 class="heading" id="certifications-title">Certifications</h2>
+        <div  class="box-sub-title-cert">
+        <h4 id="title-certification">IGL Granos S.A. It has organic production certification programs differentiated according to the final market where the product will be marketed:</h4>
+        </div>
         <div class="certifications-container">
-            <div class="services-box">
-                <h3>certifications</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda 
-                    quod, beatae temporibus porro quisquam id quo dolore officiis unde? 
-                    Sapiente cumque quae nihil porro. Ex cumque a maiores labore explicabo.</p>
-                    <a href="#" class="btn">Read More</a>
+            <div class="certifications-box">
+                <h3>USDA – NOP</h3>
+                <img src="./img/certifications/usda.png" alt="" style="width: 120px;">
+                    <!-- <a href="#" class="btn">Read More</a> -->
             </div>
-            <div class="services-box">
-                <h3>certifications</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda 
-                    quod, beatae temporibus porro quisquam id quo dolore officiis unde? 
-                    Sapiente cumque quae nihil porro. Ex cumque a maiores labore explicabo.</p>
-                    <a href="#" class="btn">Read More</a>
+            <div class="certifications-box">
+                <h3>USDA – NOP / COR</h3>
+                <img src="./img/certifications/canada.png" alt="" style="width: 120px;">
+                    <!-- <a href="#" class="btn">Read More</a> -->
             </div>
-            <div class="services-box">
-                <h3>certifications</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda 
-                    quod, beatae temporibus porro quisquam id quo dolore officiis unde? 
-                    Sapiente cumque quae nihil porro. Ex cumque a maiores labore explicabo.</p>
-                    <a href="#" class="btn">Read More</a>
+            <div class="certifications-box">
+                <h3>SUE - SENASA</h3>
+                <img src="./img/certifications/senasa.png" alt="" style="width: 120px;">
+                    <!-- <a href="#" class="btn">Read More</a> -->
+            </div>
+            <div class="certifications-box">
+                <h3>UE</h3>
+                <img src="./img/certifications/europa.png" alt="" style="width: 120px;">
             </div>
         </div>
     </section>
