fix css product

--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
             <div class="products-box">
                 <img src="./img/products/Crude-sunflower-oil.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4 id="crude-sunflower">Crude sunflower oil</h4>
+                    <h4 id="crude-sunflower">Crude sunflower </br> oil</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
             <div class="products-box">
                 <img src="./img/products/Refined-sunflower-oil.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
-                    <h4 id="refined-sunflower-oil">Refined sunflower oil</h4>
+                <div class="products-layer">
+                    <h4 id="refined-sunflower-oil">Refined sunflower </br> oil</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
             <div class="products-box">
                 <img src="./img/products/High-oleic-crude-sunflower-oil.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="high-oleic-crude">High oleic crude</h4>
                     <h4 id="sunflower-oil"> sunflower oil</h4>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -110,7 +110,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/High-oleic-refined-sunflower-oil.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="chigh-oleic-refined">Chigh oleic refined</h4>
                     <h4 id="sunflower-oil">sunflower oil</h4>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -118,7 +118,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/Sunflower-expeller.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="sunflower-expeller">Sunflower expeller</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -126,7 +126,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/Sunflower-flour.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="sunflower-flour">Sunflower flour</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -134,7 +134,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/Sunflower-seed.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="sunflower-seed">Sunflower seed</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -142,7 +142,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/Soybean.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="soybean">Soybean</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -150,7 +150,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/Refined-soybean-oil.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="refined-soybean-oil">Refined soybean oil</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -158,7 +158,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/Soybean-expeller.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="soybean-expeller">Soybean expeller</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -166,7 +166,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/Soybean-flour.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                < <div class="products-layer">
                     <h4 id="soybean-flour">Soybean flour</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
@@ -174,7 +174,7 @@
             </div>
             <div class="products-box">
                 <img src="./img/products/Flaxseed.jpg" alt="" style="width: 120px;">
-                <div class="porfolio-layer">
+                <div class="products-layer">
                     <h4 id="flaxseed">Flaxseed</h4>
                     <h6 class="br-products"> </h6>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
