actualizacion de anoche

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
             <div class="products-box">
                 <img src="./img/products/Crude-sunflower-oil.jpg" alt="" style="width: 120px;">
                 <div class="porfolio-layer">
-                    <h4 id="crude-sunflower">Crude sunflower </br> oil</h4>
-                    <h6 class="br-products"> </h6>
+                    <h4 id="crude-sunflower">Crude sunflower</h4>
+                    <h4 id="oil"> oil</h4>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
             <div class="products-box">
                 <img src="./img/products/Refined-sunflower-oil.jpg" alt="" style="width: 120px;">
                 <div class="products-layer">
-                    <h4 id="refined-sunflower-oil">Refined sunflower </br> oil</h4>
-                    <h6 class="br-products"> </h6>
+                    <h4 id="refined-sunflower-oil">Refined sunflower</h4>
+                    <h4 id="oil2"> oil</h4>
                 <!-- <a href="#"><i class='bx bx-link-external'></i></a> -->
                 </div>
             </div>
