--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'><link rel="stylesheet" href="./style.css">
+    <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'><link rel="stylesheet" href="./style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.4.1/jquery.fancybox.min.css">
     <title>IGL Granos S.A.</title>
 </head>
 <body class="light-theme">
@@ -206,25 +207,34 @@
         <h4 id="title-certification">IGL Granos S.A. It has organic production certification programs differentiated according to the final market where the product will be marketed:</h4>
         </div>
         <div class="certifications-container">
-            <div class="certifications-box">
-                <h3>USDA – NOP</h3>
-                <img src="./img/certifications/usda.png" alt="" style="width: 120px;">
-                    <!-- <a href="#" class="btn">Read More</a> -->
+            <div class="certification-containe-box">
+                <div class="certifications-box">
+                    <h3>USDA – NOP</h3>
+                    <img src="./img/certifications/usda.png" alt="" style="width: 120px;">
+                </div>
+                <a class="btn" data-fancybox="" data-type="iframe" href="./doc/2023.03-NC-2656.pdf">Certification</a>
             </div>
+            <div class="certification-containe-box">
             <div class="certifications-box">
                 <h3>USDA – NOP / COR</h3>
                 <img src="./img/certifications/canada.png" alt="" style="width: 120px;">
-                    <!-- <a href="#" class="btn">Read More</a> -->
             </div>
+            <a class="btn-clean"></a>
+        </div>
+        <div class="certification-containe-box">
             <div class="certifications-box">
                 <h3>SUE - SENASA</h3>
                 <img src="./img/certifications/senasa.png" alt="" style="width: 120px;">
-                    <!-- <a href="#" class="btn">Read More</a> -->
             </div>
+            <a class="btn-clean"></a>
+        </div>
+        <div class="certification-containe-box">
             <div class="certifications-box">
                 <h3>UE</h3>
                 <img src="./img/certifications/europa.png" alt="" style="width: 120px;">
             </div>
+            <a class="btn" data-fancybox="" data-type="iframe" href="./doc/2023.03-SUE-2656.pdf">Certification</a>
+        </div>
         </div>
     </section>
 
@@ -283,6 +293,7 @@
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.4.1/jquery.fancybox.min.js"></script>
 </body>
 </html>
