--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <h3>USDA – NOP</h3>
                     <img src="./img/certifications/usda.png" alt="" style="width: 120px;">
                 </div>
-                <a class="btn" data-fancybox="" data-type="iframe" href="./doc/2023.03-NC-2656.pdf">Certification</a>
+                <a class="btn" data-fancybox="" data-type="iframe" href="./doc/2024.03 NC 2656.pdf">Certification</a>
             </div>
             <div class="certification-containe-box">
             <div class="certifications-box">
@@ -233,7 +233,7 @@
                 <h3>UE</h3>
                 <img src="./img/certifications/europa.png" alt="" style="width: 120px;">
             </div>
-            <a class="btn" data-fancybox="" data-type="iframe" href="./doc/2023.03-SUE-2656.pdf">Certification</a>
+            <a class="btn" data-fancybox="" data-type="iframe" href="./doc/2024.03 SUE 2656.pdf">Certification</a>
         </div>
         </div>
     </section>
